[gd_scene load_steps=11 format=3 uid="uid://bq8nsvuoeaefj"]

[ext_resource type="Script" path="res://screens/main_menu.gd" id="1_pktya"]
[ext_resource type="LabelSettings" uid="uid://bq1hjxo5lbik8" path="res://awesome_title_text.tres" id="2_tlglw"]
[ext_resource type="Texture2D" uid="uid://cmp0ov8ngvxvh" path="res://art/button.png" id="3_2gegn"]
[ext_resource type="Texture2D" uid="uid://hccmrw7snew6" path="res://art/button_press.png" id="4_vu623"]
[ext_resource type="Texture2D" uid="uid://ewc8lul35a2w" path="res://art/button_hover.png" id="5_if51n"]
[ext_resource type="FontFile" uid="uid://k7fync4ajpya" path="res://art/joystix.monospace-regular.otf" id="6_pc2t0"]
[ext_resource type="AudioStream" uid="uid://c634tth3lqeae" path="res://sfx/button.wav" id="7_n30dm"]

[sub_resource type="LabelSettings" id="LabelSettings_b8rsu"]
font = ExtResource("6_pc2t0")
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jo7bl"]
font = ExtResource("6_pc2t0")
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tmn0x"]
font = ExtResource("6_pc2t0")
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control" groups=["screen"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pktya")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1840.0
offset_top = -1584.0
offset_right = 1984.0
offset_bottom = 1464.0
color = Color(0.2, 0.517647, 0.784314, 1)

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -528.0
offset_top = -368.0
offset_right = 524.0
offset_bottom = -57.0
text = "Corporation Inc."
label_settings = ExtResource("2_tlglw")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="TextureButton" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = -160.0
offset_top = -56.0
offset_right = -128.0
offset_bottom = -44.0
scale = Vector2(10, 10)
texture_normal = ExtResource("3_2gegn")
texture_pressed = ExtResource("4_vu623")
texture_hover = ExtResource("5_if51n")

[node name="Label" type="Label" parent="StartButton"]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 152.0
offset_bottom = 44.0
scale = Vector2(0.2, 0.2)
text = "START"
label_settings = SubResource("LabelSettings_b8rsu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = -160.0
offset_top = 84.0
offset_right = -128.0
offset_bottom = 96.0
scale = Vector2(10, 10)
texture_normal = ExtResource("3_2gegn")
texture_pressed = ExtResource("4_vu623")
texture_hover = ExtResource("5_if51n")

[node name="Label" type="Label" parent="QuitButton"]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 152.0
offset_bottom = 44.0
scale = Vector2(0.2, 0.2)
text = "quit"
label_settings = SubResource("LabelSettings_jo7bl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="."]
layout_mode = 0
offset_left = -888.0
offset_right = -288.0
offset_bottom = 136.0
text = "run: up & down arrows / A&d
jump: up arrow / w
dive: up arrow / W (in air)
pound: down arrow / S (in air)
open door: down arrow / s"
label_settings = SubResource("LabelSettings_tmn0x")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_n30dm")
bus = &"GUI"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
